kube111-persistence_volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.7.9
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/var/store/html"
          name: demo-pvc
      volumes:
      - name: demo-pvc
        persistentVolumeClaim:
           claimName: demo-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  type: NodePort //expose outside from browser
  ports:
    - port: 80
      nodePort: 30085
      name: http
  selector:
    name: nginx
