kube112-ingress.yaml
#ingress - Pods connects external application. 
#With the Ingress Controller you can setup a domain name which maps to your pod; you don't need to give your Service the LoadBalancer type if you use an Ingress Controller.


apiVersion: v1
kind: Ingress
metadata:
  name: myapp
spec:
  rules:
  - host: shopy.com //connect external application
    http:
     paths:
     - backend:
         serviceName: internal-service //connect pod services
         servicePort: 8080 //connect service port
